--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,3 @@
 {
-  "presets": [
-    [
-      "env",
-      {
-        "targets": {
-          "node": "4"
-        }
-      }
-    ]
-  ]
+  "presets": ["env"]
 }
