--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.0.0-beta.36",
     "babel-jest": "^22.0.4",
     "babel-preset-env": "^1.6.1",
+    "better-log": "^1.3.3",
     "chalk": "^2.3.0",
     "eslint": "^4.14.0",
     "eslint-config-zhw2590582": "^1.1.1",
