--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "test": "jest",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage",
     "release": "npm publish"
   },
   "license": "MIT",
@@ -32,6 +33,7 @@
     "babel-preset-env": "^1.6.1",
     "better-log": "^1.3.3",
     "chalk": "^2.3.0",
+    "coveralls": "^3.0.0",
     "eslint": "^4.14.0",
     "eslint-config-zhw2590582": "^1.1.1",
     "jest": "^22.0.4"
